# WhoCord

./: .gitignore  CHANGELOG.md  README.md  launcher.py  pyproject.toml  requirements.txt  web_app.py
discord_osint/: __main__.py  config.py  config_service.py  core.py  discord_api.py  email_intel.py  extras.py  pipeline.py  reporting.py  scraping.py  tools_config.py  ui.py  username_search.py  utils.py
discord_osint/pipeline/: __init__.py  base.py  builder.py  context.py  events.py
discord_osint/pipeline/stages/: url_analysis.py
discord_osint/templates/: report.html
discord_osint/utils/: logger.py  sanitizers.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigPanel.tsx  IntelCard.tsx  Layout.tsx  LiveProgress.tsx  ModuleCard.tsx  PivotConfirmModal.tsx  ResultCard.tsx
frontend/src/pages/: Config.tsx  Dashboard.tsx  History.tsx  InvestigationLive.tsx  ReportViewer.tsx
frontend/src/types/: investigation.ts
frontend/src/utils/: api.ts
templates/: index.html
