[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-osint"
version = "1.1.0"
description = "Universal OSINT identity profiling pipeline – CLI, interactive menu, and web dashboard"
readme = "README.md"
license = "MIT"
authors = [{name = "Siv-nick", email = "your@email.com"}]
dependencies = [
    "requests",
    "beautifulsoup4",
    "ExifRead",
    "openai",
    "langdetect",
    "rapidfuzz",
    "jinja2",
    "keyring",
    "socid-extractor",
    "permutations",
    "validate-email-address",
    "flask",
    "werkzeug",
    # Phase 4 domain & phone modules
    "dnspython",
    "phonenumbers",
    "pyOpenSSL",
    # Image analysis
    "pillow",
    "imagehash",
    "pytesseract",   # optional – OCR
]
requires-python = ">=3.9"

[project.scripts]
discord-osint = "discord_osint.__main__:main"

[tool.setuptools.packages.find]
include = ["discord_osint*"]
exclude = ["reports", "GitFive", "blackbird", "sharetrace", "theHarvester", "investigation_cache"]
